# linc

./: 010_getting_started.html  015_intake.html  020_headers.html  030_ir.html  050_symbols.html  060_filtering.html  070_link_surface.html  080_macros_and_layouts.html  090_validation.html  095_native_evidence.html  100_api_contract.html  110_workflows.html  115_contracts_and_policy.html  120_json_compatibility.html  130_error_surface.html  140_error_taxonomy.html  150_field_stability.html  160_failure_model.html  170_schema_review.html  180_platform_support.html  190_stable_usage_patterns.html  200_fol_integration.html  205_operations_and_release.html  210_macro_semantics.html  220_support_tiers.html  230_unsupported_cases.html  240_fol_minimal_contract.html  250_fol_extended_contract.html  260_cross_repo_versioning.html  270_reproducibility.html  280_link_resolution_boundary.html  290_release_checklist.html  300_readiness_scorecard.html  310_contract_change_checklist.html  404.html  Cargo.toml  LICENSE-MIT  Makefile  README.md  RELEASE.md  (+18 more)
.github/workflows/: code.yml
book/src/: 005_hardening_status.md  010_getting_started.md  015_intake.md  020_headers.md  030_ir.md  040_codegen.md  050_symbols.md  060_filtering.md  070_link_surface.md  080_macros_and_layouts.md  090_validation.md  095_native_evidence.md  100_api_contract.md  100_cli.md  110_workflows.md  115_contracts_and_policy.md  120_json_compatibility.md  130_error_surface.md  140_error_taxonomy.md  150_field_stability.md  160_failure_model.md  180_platform_support.md  190_stable_usage_patterns.md  200_fol_integration.md  205_operations_and_release.md  210_macro_semantics.md  220_support_tiers.md  230_unsupported_cases.md  240_fol_minimal_contract.md  250_fol_extended_contract.md  260_cross_repo_versioning.md  270_reproducibility.md  280_link_resolution_boundary.md  290_release_checklist.md  295_hermeticity_matrix.md  300_readiness_scorecard.md  310_contract_change_checklist.md  SUMMARY.md  bic.md  contract.md  (+5 more)
docs/: 010_getting_started.html  020_headers.html  030_ir.html  040_codegen.html  050_symbols.html  060_filtering.html  070_link_surface.html  080_macros_and_layouts.html  090_validation.html  100_cli.html  110_workflows.html  404.html  bic.html  print.html  searcher-c2a407aa.js  searchindex-b074ab2b.js  toc-f199b3b4.js  toc.html
memory/: feedback_no_coauthor.md
src/: analysis.rs  codegen_rust.rs  error.rs  extract.rs  ir.rs  lib.rs  line_markers.rs  link_plan.rs  main.rs  preprocess.rs  probe.rs  raw_headers.rs  symbols.rs  validate.rs
src/contract/: codec.rs  corpus.rs  error.rs  evidence.rs  identity.rs  link.rs  mod.rs  model.rs  package.rs  request.rs  schema.rs  tests.rs  wire.rs
src/intake/: adapters.rs  mod.rs  source.rs
src/ir/: mod.rs  types.rs
test/: corpus.rs
tests/: artifact_boundaries.rs  cli.rs  confidence_floor_matrix.rs  contract_corpus.rs  corpus.rs  daemon_examples.rs  difficult_record_evidence.rs  failure_matrix_link.rs  failure_matrix_probe.rs  failure_matrix_validation.rs  fol_acceptance.rs  hermetic_artifact_fixtures.rs  library_examples.rs  linux_examples.rs  macho_provider_policy.rs  macos_examples.rs  native_evidence.rs  public_api.rs  regressions.rs  torture_examples.rs  typed_error_matrix.rs  windows_examples.rs
tools/: require-nonzero-tests.sh  test-package.sh
(+51 files in other folders)
