[package]
name = "follang-linc"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
authors = ["Trim Bresilla"]
description = "Link-surface, symbol-inventory, validation, and ABI-evidence layer for C interop"
license = "MIT/Apache-2.0"
repository = "https://github.com/follang/linc"
homepage = "https://github.com/follang/linc"
documentation = "https://docs.rs/follang-linc"
readme = "README.md"
keywords = ["c", "ffi", "linker", "symbols", "abi"]
categories = ["development-tools::ffi"]
include = [
    "/src/**/*.rs",
    "/contract-corpus/v2/preservation/link-analysis.json",
    "/tests/contract_corpus.rs",
    "/Cargo.toml",
    "/LICENSE-*",
    "/README.md",
]

[lib]
name = "linc"

[features]
default = ["contracts"]
contracts = []

[dependencies]
blake3 = "1"
parc = { package = "follang-parc", version = "0.16.0", path = "../parc" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "=1.0.145", features = ["raw_value"] }
thiserror = "2"

[dev-dependencies]
